--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,8 @@
 
         <activity android:name=".ToolbarActivity"
                   android:label="@string/app_name"
-                    android:theme="@style/Toolbar"/>
+                  android:theme="@style/Toolbar"
+                  android:noHistory="true"/>
     </application>
 
     <uses-permission android:name="android.permission.READ_PROFILE" />
