--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,24 +13,17 @@
         android:protectionLevel="signature" />
 
     <uses-permission android:name="es.davilag.passtochrome.permission.C2D_MESSAGE" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/icono"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
 
         <receiver
             android:name=".GcmBroadcastReceiver"
@@ -57,14 +50,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ToolbarActivity"
-                  android:label="@string/app_name"
-                  android:theme="@style/Toolbar"
-                  android:noHistory="true"/>
+        <activity
+            android:name=".ToolbarActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Toolbar" />
+        <activity
+            android:name=".AddContainerActivity"
+            android:label="@string/title_activity_add_container"
+            android:parentActivityName=".ToolbarActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="es.davilag.passtochrome.ToolbarActivity" />
+        </activity>
+        <activity
+            android:name=".ElegirUserActivity"
+            android:label="@string/title_activity_elegir_user"
+            android:theme="@style/Toolbar">
+        </activity>
     </application>
-
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
 </manifest>
